# qtranspiler

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  config.toml  main.cpp  main.py  parse_results.cpp  scratch_file.py  small_experiments.py  temp.py  utils.py  verifier.cpp
benchmarks/: stats.csv
benchmarks/ibm/: 0410184_169.qasm  4_49_16.qasm  4gt10-v1_81.qasm  4gt11_83.qasm  4gt11_84.qasm  4gt12-v0_86.qasm  4gt12-v0_87.qasm  4gt12-v0_88.qasm  4gt12-v1_89.qasm  4gt13-v1_93.qasm  4gt13_90.qasm  4gt13_91.qasm  4gt13_92.qasm  4gt4-v0_72.qasm  4gt4-v0_73.qasm  4gt4-v0_78.qasm  4gt4-v0_79.qasm  4gt4-v0_80.qasm  4gt4-v1_74.qasm  4gt5_76.qasm  4gt5_77.qasm  4mod5-bdd_287.qasm  4mod5-v0_18.qasm  4mod5-v0_19.qasm  4mod5-v0_20.qasm  4mod5-v1_22.qasm  4mod5-v1_23.qasm  4mod5-v1_24.qasm  4mod7-v0_94.qasm  4mod7-v1_96.qasm  C17_204.qasm  TFIM_step_100_16.qasm  TFIM_step_100_32.qasm  TFIM_step_100_4.qasm  TFIM_step_100_8.qasm  TFIM_step_10_4.qasm  TFIM_step_20_4.qasm  TFIM_step_30_4.qasm  TFIM_step_40_4.qasm  TFIM_step_50_4.qasm  (+164 more)
benchmarks/ion/: 0410184_169.qasm  4_49_16.qasm  4gt10-v1_81.qasm  4gt11_83.qasm  4gt11_84.qasm  4gt12-v0_86.qasm  4gt12-v0_87.qasm  4gt12-v0_88.qasm  4gt12-v1_89.qasm  4gt13-v1_93.qasm  4gt13_90.qasm  4gt13_91.qasm  4gt13_92.qasm  4gt4-v0_72.qasm  4gt4-v0_73.qasm  4gt4-v0_78.qasm  4gt4-v0_79.qasm  4gt4-v0_80.qasm  4gt4-v1_74.qasm  4gt5_76.qasm  4gt5_77.qasm  4mod5-bdd_287.qasm  4mod5-v0_18.qasm  4mod5-v0_19.qasm  4mod5-v0_20.qasm  4mod5-v1_22.qasm  4mod5-v1_23.qasm  4mod5-v1_24.qasm  4mod7-v0_94.qasm  4mod7-v1_96.qasm  C17_204.qasm  TFIM_step_100_16.qasm  TFIM_step_100_32.qasm  TFIM_step_100_4.qasm  TFIM_step_100_8.qasm  TFIM_step_10_4.qasm  TFIM_step_20_4.qasm  TFIM_step_30_4.qasm  TFIM_step_40_4.qasm  TFIM_step_50_4.qasm  (+161 more)
benchmarks/nam_rz/: 0410184_169.qasm  4_49_16.qasm  4gt10-v1_81.qasm  4gt11_83.qasm  4gt11_84.qasm  4gt12-v0_86.qasm  4gt12-v0_87.qasm  4gt12-v0_88.qasm  4gt12-v1_89.qasm  4gt13-v1_93.qasm  4gt13_90.qasm  4gt13_91.qasm  4gt13_92.qasm  4gt4-v0_72.qasm  4gt4-v0_73.qasm  4gt4-v0_78.qasm  4gt4-v0_79.qasm  4gt4-v0_80.qasm  4gt4-v1_74.qasm  4gt5_76.qasm  4gt5_77.qasm  4mod5-bdd_287.qasm  4mod5-v0_18.qasm  4mod5-v0_19.qasm  4mod5-v0_20.qasm  4mod5-v1_22.qasm  4mod5-v1_23.qasm  4mod5-v1_24.qasm  4mod7-v0_94.qasm  4mod7-v1_96.qasm  9symml_195.qasm  C17_204.qasm  TFIM_step_100_16.qasm  TFIM_step_100_32.qasm  TFIM_step_100_4.qasm  TFIM_step_100_8.qasm  TFIM_step_10_4.qasm  TFIM_step_20_4.qasm  TFIM_step_30_4.qasm  TFIM_step_40_4.qasm  (+172 more)
benchmarks/nam_t_tdg/: TFIM_step_100_16.qasm  TFIM_step_100_32.qasm  TFIM_step_100_4.qasm  TFIM_step_100_8.qasm  TFIM_step_20_4.qasm  TFIM_step_40_4.qasm  TFIM_step_50_4.qasm  TFIM_step_60_4.qasm  TFIM_step_70_4.qasm  TFIM_step_80_4.qasm  TFIM_step_90_4.qasm  XY_step_100_4.qasm  XY_step_100_8.qasm  adder_4.qasm  adder_9.qasm  ae_nativegates_ibm_tket_8.qasm  ham15-high.qasm  ham15-low.qasm  ham15-med.qasm  heisenberg_step_10_4.qasm  heisenberg_step_15_4.qasm  heisenberg_step_20_4.qasm  heisenberg_step_25_4.qasm  heisenberg_step_30_4.qasm  heisenberg_step_35_4.qasm  heisenberg_step_40_4.qasm  heisenberg_step_45_4.qasm  heisenberg_step_50_4.qasm  heisenberg_step_50_8.qasm  heisenberg_step_5_4.qasm  hlf_10.qasm  hlf_5.qasm  hwb6.qasm  ising_model_10.qasm  ising_model_13.qasm  ising_model_16.qasm  muliply_5.qasm  multiply_10.qasm  portfolioqaoa_nativegates_ibm_tket_8.qasm  portfoliovqe_nativegates_ibm_tket_8.qasm  (+27 more)
grammars/PL/: ProgrammingLanguage.g4  ProgrammingLanguage.interp  ProgrammingLanguage.tokens  ProgrammingLanguageBaseListener.cpp  ProgrammingLanguageBaseListener.h  ProgrammingLanguageBaseVisitor.cpp  ProgrammingLanguageBaseVisitor.h  ProgrammingLanguageLexer.cpp  ProgrammingLanguageLexer.h  ProgrammingLanguageLexer.interp  ProgrammingLanguageLexer.tokens  ProgrammingLanguageListener.cpp  ProgrammingLanguageListener.h  ProgrammingLanguageParser.cpp  (+3 more)
hardware_specifications/: ibm_noise_models.py
hoare_triples/: reset_h3.txt
include/: Belief.hpp  algorithm.hpp  beliefs.hpp  boost_clean.hpp  channels.hpp  ensemble.hpp  experiments.hpp  floats.hpp  hardware_specification.hpp  instruction.hpp  markov_chain.hpp  pomdp.hpp  quantum_gates.hpp  rationals.hpp  solvers.hpp  states.hpp  utils.hpp  verification.hpp  verification_utils.hpp  verifier.hpp
parsed_results/: ghz.ipynb  main.ipynb  summary.csv  summary_basic_zero_plus_discr.txt  summary_basic_zero_plus_discr_convex.txt  summary_basic_zero_plus_discr_therm_convex.txt  summary_bell_state_reach.txt  summary_bell_state_reach_bellman.txt  summary_bell_state_reach_convex.txt  summary_bellman.csv  summary_bitflip_cxh.txt  summary_bitflip_cxh_bellman.txt  summary_bitflip_ipma.txt  summary_bitflip_ipma2.txt  summary_bitflip_ipma2_bellman.txt  summary_bitflip_ipma_bellman.txt  summary_convex.csv  summary_ghz3.txt  summary_ghz3_bellman.txt  summary_reset.txt  summary_reset_bellman.txt  summary_reset_convex.txt  summary_reset_therm_bellman.txt  summary_reset_therm_convex.txt  temp.csv  textbook_algorithms.txt  thermalization.ipynb  utils.py
scripts/: basic_zero_plus_discr.sh  basic_zero_plus_discr_therm.sh  bell_state_reach.sh  bell_state_reach_therm.sh  bellstate_reach.sh  bitflip_cxh.sh  bitflip_cxh_therm.sh  bitflip_ipma.sh  bitflip_ipma2.sh  bitflip_ipma2_therm.sh  ghz3.sh  ghz3_therm.sh  reset.sh  reset_therm.sh  server_script.sh  server_script_therm.sh
src/: Belief.cpp  algorithm.cpp  beliefs.cpp  channels.cpp  ensemble.cpp  experiments.cpp  floats.cpp  hardware_specification.cpp  instruction.cpp  markov_chain.cpp  pomdp.cpp  quantum_gates.cpp  rationals.cpp  solvers.cpp  states.cpp  temp.py  utils.cpp  verification.cpp  verification_utils.cpp  verifier.cpp
temp/: a10.txt  a11.txt  a3.txt  a5.txt  a6.txt  a8.txt  a9.txt
tests/: small_experiments.py  test_algorithms.cpp  test_beliefs.cpp  test_channels.cpp  test_example.cpp  test_experiments.cpp  test_floats.cpp  test_hardware_specification.cpp  test_instructions.cpp  test_pomdp.cpp  test_quantum_gates.cpp  test_rationals.cpp  test_states.cpp  test_utils.cpp  test_verification.cpp
(+4321 files in other folders)
